--- a/fonts/ico-moon/style.css
+++ b/fonts/ico-moon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?ygcod4');
-  src:  url('fonts/icomoon.eot?ygcod4#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?ygcod4') format('truetype'),
-    url('fonts/icomoon.woff?ygcod4') format('woff'),
-    url('fonts/icomoon.svg?ygcod4#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?60qmsk');
+  src:  url('fonts/icomoon.eot?60qmsk#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?60qmsk') format('truetype'),
+    url('fonts/icomoon.woff?60qmsk') format('woff'),
+    url('fonts/icomoon.svg?60qmsk#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -24,47 +24,52 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-ico6:before {
-  content: "\e908";
+.icon-Envelope:before {
+  content: "\e90f";
+  color: #fec009;
 }
-.icon-ico5:before {
-  content: "\e909";
-}
-.icon-ico4:before {
-  content: "\e90a";
-}
-.icon-ico3:before {
-  content: "\e90b";
-}
-.icon-ico2:before {
-  content: "\e90c";
-}
-.icon-ico1:before {
-  content: "\e90d";
-}
-.icon-arrow_right:before {
-  content: "\e906";
-}
-.icon-arrow_left:before {
-  content: "\e907";
-}
-.icon-false:before {
-  content: "\e904";
-  color: #f7bb0a;
-}
-.icon-massage:before {
-  content: "\e905";
-  color: #ccc;
-}
-.icon-calc:before {
-  content: "\e903";
-}
-.icon-Phones:before {
-  content: "\e902";
-}
-.icon-tg:before {
+.icon-Woman:before {
   content: "\e900";
 }
-.icon-viber:before {
+.icon-tg:before {
   content: "\e901";
+}
+.icon-viber:before {
+  content: "\e902";
+}
+.icon-Phones:before {
+  content: "\e903";
+}
+.icon-calc:before {
+  content: "\e904";
+}
+.icon-false:before {
+  content: "\e905";
+}
+.icon-massage:before {
+  content: "\e906";
+}
+.icon-arrow_right:before {
+  content: "\e907";
+}
+.icon-arrow_left:before {
+  content: "\e908";
+}
+.icon-ico6:before {
+  content: "\e909";
+}
+.icon-ico5:before {
+  content: "\e90a";
+}
+.icon-ico4:before {
+  content: "\e90b";
+}
+.icon-ico3:before {
+  content: "\e90c";
+}
+.icon-ico2:before {
+  content: "\e90d";
+}
+.icon-ico1:before {
+  content: "\e90e";
 }
